oscen-macros/tests/ui/mixed_rates.stderr
error: v1 does not support connections between two differently-rated non-default-rate nodes; route through an outer-rate node instead
  --> tests/ui/mixed_rates.rs:11:9
   |
11 |         a.output -> b.input;  // 4 -> 2: not supported in v1
   |         ^^^^^^^^^^^^^^^^^^^

warning: unused imports: `PolyBlepOscillator` and `TptFilter`
 --> tests/ui/mixed_rates.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator, TptFilter};
  |                    ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
